Eduprov : 30-08-2021 : Add Navbar and footer

--- a/btl-institute-of-technology.html
+++ b/btl-institute-of-technology.html
@@ -93,7 +93,7 @@
     <div class="container text-white">
       <div class="row">
         <div class="col-md-8 mt-5 pt-3">
-          <h1 class="text-black">B.Tech Textile Engineering</h1>
+          <h1 class="text-black">B.T.L Institute Of Technology And Management</h1>
         </div>
       </div>
     </div>
