Eduprov : 31-08-2021 : Add Navbar and Footer

--- a/index.html
+++ b/index.html
@@ -54,14 +54,14 @@
     content="Best Admission Guidance in Bangalore Eduprov Education offers Admission Guidance in Bangalore Career Counseling and Overseas Education" />
   <meta name="twitter:image" content="https://i.ibb.co/026GNwM/Whats-App-Image-2021-05-12-at-14-25-17.jpg" />
   <meta name="twitter:url" content="https://twitter.com/eduprov" />
-  <link rel="shortcut icon" type="image/png" href="/images/favicon.png" alt="Edurpov Logo" title="Eduprov Brand Fav-Icon" />
-  <link rel="apple-touch-icon" href="/images/favicon.png"  title="Eduprov apple-touch-icon">
+  <link rel="shortcut icon" type="image/png" href="/images/favicon.png" />
+  <link rel="apple-touch-icon" href="/images/favicon.png" >
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
   <link rel="stylesheet" href="style.css" />
   <link    rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" />
-  <link   href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css"rel="stylesheet"/>
+  <link   href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css" rel="stylesheet"/>
   <!-- MDB -->
-  <link href="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/3.6.0/mdb.min.css"rel="stylesheet"/>
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/3.6.0/mdb.min.css" rel="stylesheet"/>
   <!-- MDB -->
   <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/3.6.0/mdb.min.js"></script>
   <link   rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
@@ -859,7 +859,7 @@
           <hr style="color:gray"/> 
            <label class="text-uppercase mb-4 fw-bold lh-4 text-white course-label">MBA</label>
            <p>
-            <a id="links" href="https://eduprov.com/finance-management.html">Finance Management</a>
+            <a id="links" href="https://eduprov.com/mba-banking-finance-course.html">Finance Management</a>
           </p>
           <p>
             <a id="links" href="https://eduprov.com/retail-management-course.html">Retail Management</a>
@@ -885,7 +885,7 @@
             <a id="links" href="https://eduprov.com/bsc-computer-course.html">BSc.CS</a>
           </p>
           <p>
-            <a id="links" href="https://eduprov.com/bca-course.html">BCA</a>
+            <a id="links" href="https://eduprov.com/bachelor-of-computer-application.html">BCA</a>
           </p>
           <p>
             <a id="links" href="https://eduprov.com/mca-course.html">MCA</a>
@@ -902,13 +902,13 @@
         <div  class="col-md-3 col-lg-3 col-xl-3 mx-auto mt-3">
           <label class="text-uppercase mb-4 font-weight-bold text-white">Commerce</label>
            <p>
-            <a id="links" href="https://eduprov.com/bcom-hons-course.html">B.Com(hons)</a>
+            <a id="links" href="https://eduprov.com/bachelor-of-commerce-honours.html">B.Com(hons)</a>
           </p>
           <p>
-            <a id="links" href="">B.Com(Professional)</a>
+            <a id="links" href="https://eduprov.com/bachelor-of-commerce-professional.html">B.Com(Professional)</a>
           </p>
           <p>
-            <a id="links" href="https://eduprov.com/bba-course.html">BBA</a>
+            <a id="links" href="https://eduprov.com/bachelor-of-business-administration.html">BBA</a>
           </p>
           <hr style="color:gray"/> 
           <label class="text-uppercase mb-4 font-weight-bold text-white">Exam</label>
@@ -932,9 +932,6 @@
         </div>
         <div  class="col-md-3 col-lg-3 col-xl-3 mx-auto mt-3">
           <label class="text-uppercase mb-4 font-weight-bold text-white">Quick Links</label>
-          <p>
-            <a id="links" href="#aboutus">About</a>
-          </p>
           <p>
             <a id="links" href="https://eduprov.com/contact-form.php">Contact us</a>
           </p>
