--- a/diploma-in-dental-mechanics-course.html
+++ b/diploma-in-dental-mechanics-course.html
@@ -4,18 +4,18 @@
 <head>
   <meta charset="UTF-8"/>
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <link rel="canonical" href="https://eduprov.com/diploma-in-dentistry-course.html" />
+    <link rel="canonical" href="https://eduprov.com/diploma-in-dental-mechanics-course.html" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Diploma in Dental Mechanics Admission in Bangalore</title>
+    <title>Diploma in Dental Mechanics Admission Guidance in Bangalore</title>
     <script type="application/ld+json">
       {
         "@context": "https://schema.org",
         "@type": "Article",
         "mainEntityOfPage": {
           "@type": "WebPage",
-          "@id": "https://eduprov.com/diploma-in-dentistry-course.html"
+          "@id": "https://eduprov.com/diploma-in-dental-mechanics-course.html"
         },
-        "headline": "Diploma in Dental Mechanics Admission in Bangalore",
+        "headline": "Diploma in Dental Mechanics Admission Guidance in Bangalore",
         "description": "A diploma in dental mechanics or diploma in dental hygiene for a career in dentistry diploma in dental mechanic or diploma in dental hygiene is a paramedical course that students can take up if they want to join the dental industry and hospitals.",
         "image": "https://eduprov.com/images/favicon.png",  
         "author": {
@@ -34,7 +34,7 @@
         "dateModified": "2021-08-12"
       }
     </script>
-    <meta name="description" content="Diploma in dental mechanics or diploma in dental hygiene for a career in dentistry diploma in dental mechanic
+    <meta name="description" content="Diploma in Dental Mechanics or diploma in dental hygiene for a career in dentistry diploma in dental mechanic
     or diploma in dental hygiene is a paramedical course that students can take up if they want to join the dental industry and hospitals. ">
     <meta name="keywords" content=" 
     Diploma in dental mechanics  Diplomaing college, Diploma in dental mechanics colleges, Diploma in dental mechanics 
@@ -60,8 +60,8 @@
 
     ">
     <meta property="og:type" content="website" />
-    <meta property="og:title" content="Diploma in Dental Mechanics Admission in Bangalore" />
-    <meta property="og:url" content="https://eduprov.com/diploma-in-dentistry-course.html" />
+    <meta property="og:title" content="Diploma in Dental Mechanics Admission Guidance in Bangalore" />
+    <meta property="og:url" content="https://eduprov.com/diploma-in-dental-mechanics-course.html" />
     <meta property="og:site_name" content="Eduprov Educational Institute" />
     <meta property="og:description"
       content="Diploma in dental mechanics or diploma in dental hygiene for a career in dentistry diploma in dental mechanic
@@ -69,25 +69,25 @@
     <meta property="og:image" content="#" />
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:site" content="@eduprov" />
-    <meta name="twitter:title" content="Diploma in Dental Mechanics Admission in Bangalore" />
+    <meta name="twitter:title" content="Diploma in Dental Mechanics Admission Guidance in Bangalore" />
     <meta name="twitter:description"
       content="Diploma in dental mechanics or diploma in dental hygiene for a career in dentistry diploma in dental mechanic
       or diploma in dental hygiene is a paramedical course that students can take up if they want to join the dental industry and hospitals. " />
     <meta name="twitter:image" content="#" />
     <meta name="twitter:url" content="https://twitter.com/eduprov" />
-    <link rel="shortcut icon" type="image/png" href="/images/favicon.png"  alt="Edurpov Logo" title="Eduprov logo"  />
-    <link rel="apple-touch-icon" href="/images/favicon.png"  alt="Edurpov Logo" title="Eduprov logo" >
+    <link rel="shortcut icon" type="image/png" href="/images/favicon.png"  />
+    <link rel="apple-touch-icon" href="/images/favicon.png" >
     <meta name="author" content="thephotogenicbug">
     <link rel="stylesheet" href="blog.css" />
     <link rel="stylesheet" href="accordian.css" />
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" />
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
     <!-- Font Awesome -->
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css"rel="stylesheet"/>
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css" rel="stylesheet"/>
     <!-- Google Fonts -->
     <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" rel="stylesheet"/>
     <!-- MDB -->
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/3.6.0/mdb.min.css"rel="stylesheet"/>
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/3.6.0/mdb.min.css" rel="stylesheet"/>
     <!-- MDB -->
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/3.6.0/mdb.min.js"></script>
   
@@ -116,7 +116,7 @@
       
     <div class="row">
       <div class="col-md-8 mt-5 pt-3">
-        <h1 class="text-dark">Diploma in dental mechanics</h1>
+        <h1 class="text-dark">Diploma in Dental Mechanics</h1>
       </div>
     </div>
   </div>
@@ -124,7 +124,7 @@
     <div class="row">
       <div class="col-md-12">
         <p class="text-justify">
-          Diploma in dental mechanics or diploma in dental hygiene for a career in dentistry diploma in dental mechanic
+          Diploma in Dental Mechanics or diploma in dental hygiene for a career in dentistry diploma in dental mechanic
           or diploma in dental hygiene is a paramedical course that
           students can take up if they want to join the dental industry and hospitals. They both are very similar
           courses
