Eduprov : 01-09-2021 : Add Career counseling overseas Education Content

--- a/diploma-in-dvl.html
+++ b/diploma-in-dvl.html
@@ -161,7 +161,7 @@ basics scope, Diploma in Dermatology, Venereology & Leprosy mathematics scope, D
       <div class="row">
         <div class="col-md-12">
           <h2 class="text-center text-dark" >
-            Courses available
+            Courses
           </h2>
         </div>
 
