Eduprov : 01-09-2021 : redesign contact form

--- a/engineering-course-blogs.html
+++ b/engineering-course-blogs.html
@@ -595,10 +595,10 @@
   </div>
   <div class="col-md-4">
     <div class="col max-mb-30 aos-init aos-animate" data-aos="fade-up">
-      <a href="https://eduprov.com/mtech-of-engineering.html" style="text-decoration: none;" class="icon-box text-center" data-bg-color="#fff"
+      <a href="https://eduprov.com/master-of-engineering.html" style="text-decoration: none;" class="icon-box text-center" data-bg-color="#fff"
         style="background-color: rgb(255, 255, 255)" data-abc="true">
         <div class="content">
-          <label class="title fz-20">M.Tech Master of Engineering</label>
+          <label class="title fz-20">M.E Master of Engineering</label>
           <div class="desc">
             <p >
               Master of Engineering (M.E) is a postgraduate program in the fields of Engineering and technology. The course is for 2 years and to get avail of this course you should have an undergraduate degree in Bachelors in Engineers or Technology. 
