--- a/index.html
+++ b/index.html
@@ -159,41 +159,47 @@
           <div class="header-section mt-5">
             <h3 class="title mt-3">Service Offered</h3>
             <p class="description">Admission Guidance, Career Counseling and Overseas Education.</p>
+           
           </div>
         </div>
       </div>
       <div class="row" data-aos="fade-up">
         <!-- Single Service -->
         <div class="col-md-6 col-lg-4">
-          <div class="single-service">
-            <div class="content">
-              <span class="icon">
-                <i class="fa fa-university"></i>
-              </span>
-              <h3 class="title">Admission Guidance</h3>
-              <p class="description">we focus on admission in versatile colleges and universities.</p>
-
+           <a href="https://eduprov.com/admission-guidance.html">
+            <div class="single-service">
+              <div class="content">
+                <span class="icon">
+                  <i class="fa fa-university"></i>
+                </span>
+                <h3 class="title">Admission Guidance</h3>
+                <p class="description">we focus on admission in versatile colleges and universities.</p>
+  
+              </div>
+              <span class="circle-before"></span>
             </div>
-            <span class="circle-before"></span>
-          </div>
+           </a>
         </div>
 
         <div class="col-md-6 col-lg-4">
-          <div class="single-service">
-            <div class="content">
-              <span class="icon">
-                <i class="fa fa-users"></i>
-              </span>
-              <h3 class="title">Career Counseling</h3>
-              <p class="description">talk to our career counselors who are expertised in guiding students.</p>
-
+          <a href="https://eduprov.com/career-counseling.html">
+            <div class="single-service">
+              <div class="content">
+                <span class="icon">
+                  <i class="fa fa-users"></i>
+                </span>
+                <h3 class="title">Career Counseling</h3>
+                <p class="description">talk to our career counselors who are expertised in guiding students.</p>
+  
+              </div>
+              <span class="circle-before"></span>
             </div>
-            <span class="circle-before"></span>
-          </div>
+          </a>
         </div>
         <!-- / End Single Service -->
         <!-- Single Service -->
         <div class="col-md-6 col-lg-4">
+         <a href="https://eduprov.com/overseas-education.html">
           <div class="single-service">
             <div class="content">
               <span class="icon">
@@ -205,6 +211,7 @@
             </div>
             <span class="circle-before"></span>
           </div>
+         </a>
         </div>
       </div>
     </div>
@@ -215,7 +222,7 @@
     <div class="row g-4 py-5 row-cols-1 row-cols-lg-3">
       <div class="col d-flex align-items-start" data-aos="fade-up">
         <div class="icon-square bg-light text-dark flex-shrink-0 me-3">
-          <img src="images/doctor.png" alt="Blog-icons" height="60px" width="60px" title="Medical Course" />
+          <img src="images/doctor.png" alt="Blog-icons" height="60" width="60" title="Medical Course" />
         </div>
         <div>
           <label class="blog-label-heading">Medical Course</label>
@@ -229,7 +236,7 @@
       </div>
       <div class="col d-flex align-items-start" data-aos="fade-up">
         <div class="icon-square bg-light text-dark flex-shrink-0 me-3">
-          <img src="images/engineering.png" alt="Blog-icons" height="60px" width="60px" loading="lazy" title="Engineering Course"/>
+          <img src="images/engineering.png" alt="Blog-icons" height="60" width="60" loading="lazy" title="Engineering Course"/>
         </div>
         <div>
           <label class="blog-label-heading">Engineering Course</label>
@@ -243,7 +250,7 @@
       </div>
       <div class="col d-flex align-items-start" data-aos="fade-up">
         <div class="icon-square bg-light text-dark flex-shrink-0 me-3">
-          <img src="images/business.png" alt="Blog-icons" height="60px" width="60px" loading="lazy" title="MBA Course" />
+          <img src="images/business.png" alt="Blog-icons" height="60" width="60" loading="lazy" title="MBA Course" />
         </div>
         <div>
           <label class="blog-label-heading">MBA Course</label>
@@ -259,7 +266,7 @@
     <div class="row g-4 py-5 row-cols-1 row-cols-lg-3" data-aos="fade-up">
       <div class="col d-flex align-items-start">
         <div class="icon-square bg-light text-dark flex-shrink-0 me-3">
-          <img src="images/law.png" alt="Blog-icons" height="60px" width="60px" loading="lazy" title="Law Course" />
+          <img src="images/law.png" alt="Blog-icons" height="60" width="60" loading="lazy" title="Law Course" />
         </div>
         <div>
           <label class="blog-label-heading">Law Course</label>
@@ -273,7 +280,7 @@
       </div>
       <div class="col d-flex align-items-start" data-aos="fade-up">
         <div class="icon-square bg-light text-dark flex-shrink-0 me-3">
-          <img src="images/brush.png" alt="Blog-icons"  height="60px" width="60px" loading="lazy" title="Arts Course"/>
+          <img src="images/brush.png" alt="Blog-icons"  height="60" width="60" loading="lazy" title="Arts Course"/>
         </div>
         <div>
           <label class="blog-label-heading">Arts Course</label>
@@ -287,7 +294,7 @@
       </div>
       <div class="col d-flex align-items-start" data-aos="fade-up">
         <div class="icon-square bg-light text-dark flex-shrink-0 me-3">
-          <img src="images/account.png" alt="Blog-icons" height="60px" width="60px" loading="lazy" title="Commerce Course" />
+          <img src="images/account.png" alt="Blog-icons" height="60" width="60" loading="lazy" title="Commerce Course" />
         </div>
         <div>
           <label class="blog-label-heading">Commerce Course</label>
@@ -304,7 +311,7 @@
     <div class="row g-4 py-5 row-cols-1 row-cols-lg-3" data-aos="fade-up">
       <div class="col d-flex align-items-start">
         <div class="icon-square bg-light text-dark flex-shrink-0 me-3">
-          <img src="images/web-design.png" alt="Blog-icons" height="60px" width="60px" loading="lazy" title="Designing Course" />
+          <img src="images/web-design.png" alt="Blog-icons" height="60" width="60" loading="lazy" title="Designing Course" />
         </div>
         <div>
           <label class="blog-label-heading">Designing Course</label>
@@ -318,7 +325,7 @@
       </div>
       <div class="col d-flex align-items-start" data-aos="fade-up">
         <div class="icon-square bg-light text-dark flex-shrink-0 me-3">
-          <img src="images/presentation.png" alt="Blog-icons" height="60px" width="60px" loading="lazy" title="Education Course" />
+          <img src="images/presentation.png" alt="Blog-icons" height="60" width="60" loading="lazy" title="Education Course" />
         </div>
         <div>
           <label class="blog-label-heading">Education Course</label>
@@ -331,7 +338,7 @@
       </div>
       <div class="col d-flex align-items-start" data-aos="fade-up">
         <div class="icon-square bg-light text-dark flex-shrink-0 me-3">
-          <img src="images/first-aid-kit.png" alt="Blog-icons" height="60px" width="60px" loading="lazy" title="Para-Medical Course" />
+          <img src="images/first-aid-kit.png" alt="Blog-icons" height="60" width="60" loading="lazy" title="Para-Medical Course" />
         </div>
         <div>
           <label class="blog-label-heading">Para-Medical Course</label>
@@ -349,7 +356,7 @@
     <div class="row g-4 py-5 row-cols-1 row-cols-lg-3" data-aos="fade-up">
       <div class="col d-flex align-items-start">
         <div class="icon-square bg-light text-dark flex-shrink-0 me-3">
-          <img src="images/science.png" alt="Blog-icons" height="60px" width="60px" loading="lazy" title="Science Course" />
+          <img src="images/science.png" alt="Blog-icons" height="60" width="60" loading="lazy" title="Science Course" />
         </div>
         <div>
           <label class="blog-label-heading">Science Course</label>
@@ -363,7 +370,7 @@
       </div>
       <div class="col d-flex align-items-start" data-aos="fade-up">
         <div class="icon-square bg-light text-dark flex-shrink-0 me-3">
-          <img src="images/technical-support.png" alt="Blog-icons" height="60px" width="60px" loading="lazy" title="Technical Course" />
+          <img src="images/technical-support.png" alt="Blog-icons" height="60" width="60" loading="lazy" title="Technical Course" />
         </div>
         <div>
           <label class="blog-label-heading">Technical Course</label>
@@ -388,7 +395,7 @@
 
       <div class="col d-flex align-items-start" data-aos="fade-up">
         <div class="icon-square bg-light text-dark flex-shrink-0 me-3">
-          <img src="images/school.png"  alt="Blog-icons" height="60px" width="60px" loading="lazy" title="School Blogs"/>
+          <img src="images/school.png"  alt="Blog-icons" height="60" width="60" loading="lazy" title="School Blogs"/>
         </div>
         <div>
           <label class="blog-label-heading">School Blogs</label>
@@ -403,7 +410,7 @@
       </div>
       <div class="col d-flex align-items-start" data-aos="fade-up">
         <div class="icon-square bg-light text-dark flex-shrink-0 me-3">
-          <img src="images/college.png" alt="Blog-icons"  height="60px" width="60px" loading="lazy"  title="College Blogs" />
+          <img src="images/college.png" alt="Blog-icons"  height="60" width="60" loading="lazy"  title="College Blogs" />
         </div>
         <div>
           <label class="blog-label-heading">College Blogs</label>
@@ -428,7 +435,7 @@
 
       <div class="col d-flex align-items-start" data-aos="fade-up">
         <div class="icon-square bg-light text-dark flex-shrink-0 me-3">
-          <img src="images/exam.png"  alt="Blog-icons" height="60px" width="60px" loading="lazy" title="Exam Blogs"  />
+          <img src="images/exam.png"  alt="Blog-icons" height="60" width="60" loading="lazy" title="Exam Blogs"  />
         </div>
         <div>
           <label class="blog-label-heading">Exam Blogs</label>
@@ -455,22 +462,22 @@
       </div>
       <div class="row" data-aos="fade-up">
         <div class="col-md-12">
-          <p class="text-justify text-dark" id="paragraph-font">
+          <p class="text-justify text-dark">
             <b>Best Admission Guidance in Bangalore</b> Eduprov is an esteemed name in <b>Career Counseling, Overseas
               Education & Admission Guidance</b> institute located in the heart of Bengaluru. EDUPROV works to promote
             excellence in education and with our unique ability, our successful track record and continued growth,
             EDUPROV has developed to become one of the most active, innovative and well-respected organizations in the
             field admission guidance, overseas education and career counselling
           </p>
-          <label class="text-justify text-dark" id="paragraph-font" style="font-weight: bold;">Philosophy</label>
-          <p class="text-justify text-dark" id="paragraph-font">
+          <label class="text-justify text-dark" style="font-weight: bold;">Philosophy</label>
+          <p class="text-justify text-dark">
             It is our belief at EDUPROV that career guidance, admission consulting and overseas education can be a
             standout amongst the most energizing and testing fields at any organization of advanced education. To be
             effective in creating content important for the students, workforce, and staff, one is required to have
             three in number qualities: technological dominance, solid communication capacity, and development expertise
             inside of learning situations.
           </p>
-          <p class="text-justify text-dark" id="paragraph-font">
+          <p class="text-justify text-dark">
             We grasp these standards when settling on the day by day choices and growing long haul objectives in
             education for administration, personnel, staff, and understudies. Execution of these objectives will
             safeguard accomplishment of goals for today, tomorrow, and always.
@@ -491,7 +498,7 @@
       </div>
       <div class="row" data-aos="fade-up">
         <div class="col-md-6">
-          <p class="text-justify text-dark" id="paragraph-font">
+          <p class="text-justify text-dark">
             <b>Eduprov Education is an Educational Consultancy</b> offering all primitive and prevalent services like
             <b>Admission Guidance, Career Counseling and Overseas Education</b>. Eduprov`s main vision is to change a
             student`s life with the dynamic changes in the academic level. Eduprov has been a trusted and established
@@ -501,7 +508,7 @@
             a tedious task.
           </p>
 
-          <p class="text-justify text-dark" id="paragraph-font">
+          <p class="text-justify text-dark">
             eduprov provides elementary ways to fulfill all the possible needs of not just in accordance with the parent
             but also the student. These days students are so hasty in making decisions that one wrong step would lead
             them to a different career. Hence it is suggested to all the students to make the right decision at the
@@ -512,12 +519,12 @@
 
         </div>
         <div class="col-md-6">
-          <img src="./images/book-lovers.svg" className="img-fluid"  alt="Student-icon"  title="Kid with a book in his hand" height="430px" width="430px" style="margin-left: 20px;"/>
+          <img src="./images/book-lovers.svg" className="img-fluid"  alt="Student-icon"  title="Kid with a book in his hand" height="430" width="430" style="margin-left: 20px;"/>
         </div>
       </div>
       <div class="row" data-aos="fade-up">
         <div class="col-md-12">
-          <p class="text-justify text-dark" id="paragraph-font">
+          <p class="text-justify text-dark" >
             This way the service provided is very helpful and marks brilliancy to the students in making decisions of
             their career. <b>Career counselors at Eduprov</b> give the students a better view onto the courses their
             scope and future prospects. The counselors are skilled , empathetic and compassionate about their job role.
