--- a/master-of-engineering.html
+++ b/master-of-engineering.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8"/>
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <link rel="canonical" href="https://eduprov.com/mtech-of-engineering.html" />
+  <link rel="canonical" href="https://eduprov.com/master-of-engineering.html" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Master of Engineering (M.E) Admission Guidance in Bangalore</title>
   <script type="application/ld+json">
@@ -13,7 +13,7 @@
       "@type": "Article",
       "mainEntityOfPage": {
         "@type": "WebPage",
-        "@id": "https://eduprov.com/mtech-of-engineering.html"
+        "@id": "https://eduprov.com/master-of-engineering.html"
       },
       "headline": "Master of Engineering (M.E) Admission Guidance in Bangalore",
       "description": "Master of Engineering is also termed as Master of Technology, Master of Science in 
@@ -45,7 +45,7 @@
   ">
   <meta property="og:type" content="website" />
   <meta property="og:title" content="Master of Engineering (M.E) Admission Guidance in Bangalore" />
-  <meta property="og:url" content="https://eduprov.com/mtech-of-engineering.html" />
+  <meta property="og:url" content="https://eduprov.com/master-of-engineering.html" />
   <meta property="og:site_name" content="Eduprov Educational Institute" />
   <meta property="og:description"
     content="Master of Engineering is also termed as Master of Technology, Master of Science in 
@@ -110,7 +110,7 @@
     <div class="row">
         <div class="col-md-12">
           <p class="text-justify text-dark">
-            Master of Engineering (M.E) is a postgraduate program in the fields of Engineering and 
+            <b>Master of Engineering (M.E)</b> is a postgraduate program in the fields of Engineering and 
             technology. The course is for 2 years and to get avail of this course you should have an 
             undergraduate degree in Bachelors in Engineers or Technology. There are many institutions 
             in the country which are providing a good foundation to get a <b>Masters Degree in Engineering.</b>
