Done Changes in title & removed space

--- a/btech-in-automobile.html
+++ b/btech-in-automobile.html
@@ -6,7 +6,7 @@
     <link rel="canonical" href="https://eduprov.com/btech-in-automobile.html" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>
-      B.Tech Automobile Engineering Admission | Eligibility | Colleges
+      B.Tech Automobile Engineering Admission Guidance in Bangalore
     </title>
     <script type="application/ld+json">
       {
@@ -16,7 +16,7 @@
           "@type": "WebPage",
           "@id": "https://eduprov.com/btech-in-automobile.html"
         },
-        "headline": "B.Tech Automobile Engineering Admission | Eligibility | Colleges",
+        "headline": "B.Tech Automobile Engineering Admission Guidance in Bangalore",
         "description": "Automobile Engineering us related to vehicles design, development, production & safety. Find Top Colleges, Admission, Entrance, Counseling & Scope with EDUPROV.",
         "image": "https://eduprov.com/images/favicon.png",
         "author": {
@@ -59,7 +59,7 @@
     <meta property="og:type" content="website" />
     <meta
       property="og:title"
-      content="B.Tech Automobile Engineering Admission | Eligibility | Colleges"
+      content="B.Tech Automobile Engineering Admission Guidance in Bangalore"
     />
     <meta
       property="og:url"
@@ -75,11 +75,12 @@
     <meta name="twitter:site" content="@eduprov" />
     <meta
       name="twitter:title"
-      content="B.Tech Automobile Engineering Admission | Eligibility | Colleges"
+      content="B.Tech Automobile Engineering Admission Guidance in Bangalore"
     />
     <meta
       name="twitter:description"
-      content="Automobile Engineering us related to vehicles design, development, production & safety. Find Top Colleges, Admission, Entrance, Counseling & Scope with EDUPROV."
+      content="Automobile Engineering us related to vehicles design, development, production & safety. Find Top Colleges, Admission, Entrance,
+       Counseling & Scope with EDUPROV."
     />
     <meta name="twitter:image" content="#" />
     <meta name="twitter:url" content="https://twitter.com/eduprov" />
@@ -228,13 +229,13 @@
 
             <p class="card-text text-dark">
               The process of
-              <b>admissions for B. Tech Automobile Engineering</b> is not very
+              <b>admissions for B.Tech Automobile Engineering</b> is not very
               complicated. The admissions happen every year by conducting
               entrance exams and their 12th board results. Admissions happen
               either entrance exams or through direct admissions process.
             </p>
             <label class="sub-heading-label"
-              >The top entrance exams for B. Tech Automobile Engineering are as
+              >The top entrance exams for B.Tech Automobile Engineering are as
               follows:</label
             >
             <ul>
@@ -293,21 +294,21 @@
                 opportunities in a shorter run.
               </p>
               <p class="card-text text-dark">
-                <b>B.E or B. Tech in Automobile Engineering:</b> B.E or B. Tech
+                <b>B.E or B.Tech in Automobile Engineering:</b> B.E or B.Tech
                 in automobile engineering is a 4 year undergraduate course that
                 students can opt after completion of their 12th standard. This
                 course is a skill oriented multi- faceted with good career
                 opportunities for students.
               </p>
               <p class="card-text text-dark">
-                <b>B. Tech in Automotive Design:</b> B. Tech in Automotive
+                <b>B.Tech in Automotive Design:</b> B.Tech in Automotive
                 Design is a 4 year undergraduate course which is a major
                 specialization of automobile engineering which deals with the
                 designing of various auto motor vehicles. Students can take this
                 course after completion of their 12th standard.
               </p>
               <p class="card-text text-dark">
-                <b>M.E or M. Tech in Automobile engineering:</b> M.E or M. Tech
+                <b>M.E or M.Tech in Automobile engineering:</b> M.E or M.Tech
                 is a 2 year post graduation program that students can opt after
                 completion of their graduation which is also considered as
                 higher education and provides more knowledge onto this
