--- a/btech-in-civil.html
+++ b/btech-in-civil.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <link rel="canonical" href="https://eduprov.com/btech-in-civil.html" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>B.Tech Civil Engineering Admission | Eligibility | Colleges</title>
+    <title>B.Tech Civil Engineering Admission Guidance in Bangalore</title>
     <script type="application/ld+json">
       {
         "@context": "https://schema.org",
@@ -14,8 +14,8 @@
           "@type": "WebPage",
           "@id": "https://eduprov.com/btech-in-civil.html"
         },
-        "headline": "B.Tech Civil Engineering Admission | Eligibility | Colleges",
-        "description": "B.E/ B. Tech in civil engineering is a 4-year undergraduate degree after the completion of 12th standard that students choose for better skills. ",
+        "headline": "B.Tech Civil Engineering Admission Guidance in Bangalore",
+        "description": "B.E/ B.Tech in civil engineering is a 4-year undergraduate degree after the completion of 12th standard that students choose for better skills. ",
         "image": "https://eduprov.com/images/favicon.png",
         "author": {
           "@type": "Organization",
@@ -35,7 +35,7 @@
     </script>
     <meta
       name="description"
-      content="B.E/ B. Tech in civil engineering is a 4-year undergraduate degree after the completion of 12th standard that students choose for better skills. "
+      content="B.E/ B.Tech in civil engineering is a 4-year undergraduate degree after the completion of 12th standard that students choose for better skills. "
     />
     <meta
       name="keywords"
@@ -56,7 +56,7 @@
     <meta property="og:type" content="website" />
     <meta
       property="og:title"
-      content="B.Tech Civil Engineering Admission | Eligibility | Colleges"
+      content="B.Tech Civil Engineering Admission Guidance in Bangalore"
     />
     <meta
       property="og:url"
@@ -65,18 +65,18 @@
     <meta property="og:site_name" content="Eduprov Educational Institute" />
     <meta
       property="og:description"
-      content="B.E/ B. Tech in civil engineering is a 4-year undergraduate degree after the completion of 12th standard that students choose for better skills. "
+      content="B.E/ B.Tech in civil engineering is a 4-year undergraduate degree after the completion of 12th standard that students choose for better skills. "
     />
     <meta property="og:image" content="#" />
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:site" content="@eduprov" />
     <meta
       name="twitter:title"
-      content="B.Tech Civil Engineering Admission | Eligibility | Colleges"
+      content="B.Tech Civil Engineering Admission Guidance in Bangalore"
     />
     <meta
       name="twitter:description"
-      content="B.E/ B. Tech in civil engineering is a 4-year undergraduate degree after the completion of 12th standard that students choose for better skills. "
+      content="B.E/ B.Tech in civil engineering is a 4-year undergraduate degree after the completion of 12th standard that students choose for better skills. "
     />
     <meta name="twitter:image" content="#" />
     <meta name="twitter:url" content="https://twitter.com/eduprov" />
@@ -240,7 +240,7 @@
             <p class="card-text text-dark">
               For <b>admissions in civil engineering</b> a candidate must fulfil the
               eligibility criteria and then follow the further steps to get
-              enrolment. There are two ways of getting admissions for B. Tech
+              enrolment. There are two ways of getting admissions for B.Tech
               Civil engineering. One is through entrance exams and another is
               through direct admissions or merit based <b>admission.</b> Through
               entrance exams the students can get admissions in less fee and if
@@ -293,14 +293,14 @@
               </p>
 
               <p class="card-text text-dark">
-                <b> B.E/ B. Tech in civil engineering</b> is a 4-year
+                <b> B.E/ B.Tech in civil engineering</b> is a 4-year
                 undergraduate degree after the completion of 12th standard that
                 students choose for better skills.
               </p>
               <p class="card-text text-dark">
-                <b>ME/ M. Tech</b> is a 2- year post graduate course that
+                <b>ME/ M.Tech</b> is a 2- year post graduate course that
                 students can opt after completion of their graduation from B.E
-                or B. Tech for success in a longer run as it has better career
+                or B.Tech for success in a longer run as it has better career
                 opportunities.
               </p>
             </div>
