Contents Added on Website BPT & Biotech engineerg

--- a/science-course-blogs.html
+++ b/science-course-blogs.html
@@ -170,13 +170,13 @@
 
           <div class="col-md-4">
             <div class="col max-mb-30 aos-init aos-animate" data-aos="fade-up">
-              <a href="https://eduprov.com/btech-in-dairy-technology.html" style="text-decoration: none;" class="icon-box text-center" data-bg-color="#fff"
+              <a href="https://eduprov.com/bsc-in-dairy-technology.html" style="text-decoration: none;" class="icon-box text-center" data-bg-color="#fff"
                 style="background-color: rgb(255, 255, 255)" data-abc="true">
                 <div class="content">
-                  <label class="title fz-20">B. Sc Dairy Technology </label>
+                  <label class="title fz-20">B.Sc Dairy Technology </label>
                   <div class="desc">
                     <p>
-                        B.Tech Diary Technology deals with the technologized form of processing dairy.
+                        B.Sc Dairy Technology as the name suggests the course purely deals with milk processing and related products.
                     </p>
                   </div>
                   <span class="link">Read More <i class="fa fa-arrow-right"></i></span>
