Done changes in engineering course blogs

--- a/engineering-course-blogs.html
+++ b/engineering-course-blogs.html
@@ -934,6 +934,58 @@
               </a>
             </div>
           </div>
+
+                    <div class="col-md-4">
+            <div class="col max-mb-30 aos-init aos-animate" data-aos="fade-up">
+              <a
+                href="https://eduprov.com/btech-in-biomedical.html"
+                style="text-decoration: none"
+                class="icon-box text-center"
+                data-bg-color="#fff"
+                style="background-color: rgb(255, 255, 255)"
+                data-abc="true"
+              >
+                <div class="content">
+                  <label class="title fz-20">B.Tech Biomedical Engineering</label>
+                  <div class="desc">
+                    <p>
+                      B.Tech Biomedical Engineering is a 4 year under graduate course
+            which is further divided into 8 semesters.
+                    </p>
+                  </div>
+                  <span class="link"
+                    >Read More <i class="fa fa-arrow-right"></i
+                  ></span>
+                </div>
+              </a>
+            </div>
+          </div>
+
+                    <div class="col-md-4">
+            <div class="col max-mb-30 aos-init aos-animate" data-aos="fade-up">
+              <a
+                href="https://eduprov.com/btech-in-biochemical.html"
+                style="text-decoration: none"
+                class="icon-box text-center"
+                data-bg-color="#fff"
+                style="background-color: rgb(255, 255, 255)"
+                data-abc="true"
+              >
+                <div class="content">
+                  <label class="title fz-20">B.Tech Biochemical Engineering</label>
+                  <div class="desc">
+                    <p>
+                      Biochemical engineering is a much-known stream to many as it involves a lot in latest technology for various products such as 
+            cosmetics, vaccines, proteins, enzymes, pharmaceuticals, drugs, perfumes etc.
+                    </p>
+                  </div>
+                  <span class="link"
+                    >Read More <i class="fa fa-arrow-right"></i
+                  ></span>
+                </div>
+              </a>
+            </div>
+          </div>
           <div class="col-md-4">
             <div class="col max-mb-30 aos-init aos-animate" data-aos="fade-up">
               <a
