Eduprov : 14-10-2021 : Edit FAQ Page and link it from Homepage

--- a/frequently-asked-questions.html
+++ b/frequently-asked-questions.html
@@ -44,54 +44,22 @@
 
     <div class="container-faq">
 
-      <div class="questions">
+
+       <div class="questions">
         <div class="visible-pannel"> 
-          <h2>Lorem ipsum dolor sit amet.</h2>
+          <h2>Test</h2>
           <img src="./images/add.svg" alt="add icon">
         </div>
         <div class="toggle-pannel">
-          <h4>Lorem ipsum dolor sit amet.</h4>
+          <h4>Test</h4>
           <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus illo reiciendis, ducimus mollitia, voluptates adipisci ex dicta non nobis voluptatum aliquid molestiae autem quia consequatur expedita laboriosam iusto fugiat unde.</p>
         </div>
       </div>
 
 
-      <div class="questions">
-        <div class="visible-pannel"> 
-          <h2>Lorem ipsum dolor.</h2>
-          <img src="./images/add.svg" alt="add icon">
-        </div>
-        <div class="toggle-pannel">
-          <h4>Lorem ipsum dolor sit amet.</h4>
-          <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quod id, voluptatum eligendi asperiores aliquid dolorum!.</p>
-        </div>
-      </div>
-
-      <div class="questions">
-        <div class="visible-pannel"> 
-          <h2>Lorem ipsum.</h2>
-          <img src="./images/add.svg" alt="add icon">
-        </div>
-        <div class="toggle-pannel">
-          <h4>Lorem ipsum dolor sit amet.</h4>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid pariatur voluptatem voluptates! Enim a perspiciatis amet dignissimos, explicabo, autem odit perferendis illum laborum mollitia fugit, voluptatibus similique sit ipsum debitis!</p>
-        </div>
-      </div>
-
-
-      <div class="questions">
-        <div class="visible-pannel"> 
-          <h2>Lorem ipsum dolor sit amet.</h2>
-          <img src="./images/add.svg" alt="add icon">
-        </div>
-        <div class="toggle-pannel">
-          <h4>Lorem ipsum dolor sit amet.</h4>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Veniam reprehenderit beatae, maiores, repellendus quae pariatur culpa blanditiis impedit minus rerum quod harum nulla ut assumenda eum sint aut placeat sed ab delectus totam magnam quidem..</p>
-        </div>
-      </div>
-
 
     </div>
+    
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.8.0/gsap.min.js" integrity="sha512-eP6ippJojIKXKO8EPLtsUMS+/sAGHGo1UN/38swqZa1ypfcD4I0V/ac5G3VzaHfDaklFmQLEs51lhkkVaqg60Q==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
   <script src="app.js"></script>
