--- a/index.html
+++ b/index.html
@@ -484,6 +484,7 @@
           </p>
         </div>
       </div>
+     
     </div>
   </section>
   <section class="section-services">
@@ -534,7 +535,13 @@
             heights.
           </p>
         </div>
-
+      </div>
+       <div class="row">
+        <div class="col-md-6">
+          <a href="frequently-asked-questions.html" class="btn btn-danger">Frequently Asked Questions</a>
+        </div>
+        <div class="col-md-6"></div>
+       
       </div>
     </div>
   </section>
